# flowchart-graphviz

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/flowchart/: cli.py  graph.py  parser.py
test/fixtures/: bulb.flow  mindmap.flow  simple.flow
test/parser/: test_bulb.py  test_dot.py  test_mindmap.py  test_orgchart.py  test_simple.py  test_utils.py
tests/fixtures/: orgchart.flow
tests/parser/: test_bulb.py  test_dot.py  test_mindmap.py  test_orgchart.py  test_simple.py
