[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowchart-graphviz"
description = "Convert flowcharts into Graphviz graphs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydot>=4.0.1",
]
dynamic = ["version"]

[project.scripts]
flowchart = "flowchart.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/flowchart"]

[tool.hatch.version]
path = "src/flowchart/__init__.py"
